; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_UnixUniParseToken.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Internat.c_UnixUniParseToken.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @UnixUniParseToken(i32* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %12, %2
  %16 = call i8* @ZeroMalloc(i32 8)
  %17 = bitcast i8* %16 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %17, %struct.TYPE_4__** %6, align 8
  %18 = call i8* @ZeroMalloc(i32 0)
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  store i8* %18, i8** %20, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  store %struct.TYPE_4__* %21, %struct.TYPE_4__** %3, align 8
  br label %39

22:                                               ; preds = %12
  %23 = load i32*, i32** %4, align 8
  %24 = call i8* @CopyUniToStr(i32* %23)
  store i8* %24, i8** %8, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = call i8* @CopyUniToStr(i32* %25)
  store i8* %26, i8** %9, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = call i32* @ParseToken(i8* %27, i8* %28)
  store i32* %29, i32** %7, align 8
  %30 = load i32*, i32** %7, align 8
  %31 = call %struct.TYPE_4__* @TokenListToUniTokenList(i32* %30)
  store %struct.TYPE_4__* %31, %struct.TYPE_4__** %6, align 8
  %32 = load i32*, i32** %7, align 8
  %33 = call i32 @FreeToken(i32* %32)
  %34 = load i8*, i8** %8, align 8
  %35 = call i32 @Free(i8* %34)
  %36 = load i8*, i8** %9, align 8
  %37 = call i32 @Free(i8* %36)
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  store %struct.TYPE_4__* %38, %struct.TYPE_4__** %3, align 8
  br label %39

39:                                               ; preds = %22, %15
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  ret %struct.TYPE_4__* %40
}

declare dso_local i8* @ZeroMalloc(i32) #1

declare dso_local i8* @CopyUniToStr(i32*) #1

declare dso_local i32* @ParseToken(i8*, i8*) #1

declare dso_local %struct.TYPE_4__* @TokenListToUniTokenList(i32*) #1

declare dso_local i32 @FreeToken(i32*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
